# JurisNode

./: .gitignore  main.py  pyproject.toml  requirements.txt
Backend/: juri_api.py
Backend/artifacts/: indexes.json  manifest.json
Backend/notebook/: legal_precedent_han (1).ipynb  legal_precedent_han.py
