[project]
name = "jurisnode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "torch>=2.12.0",
    "torch-geometric>=2.8.0",
    "uvicorn>=0.49.0",
]
